--- a/scripts/openapi2ruby/lib/openapi2ruby/templates/serializer.rb.erb
+++ b/scripts/openapi2ruby/lib/openapi2ruby/templates/serializer.rb.erb
@@ -2,16 +2,12 @@ class <%= @schema.name %>Serializer < ActiveModel::Serializer
   attributes <%= @schema.properties.map{ |p| ":#{p.name}" }.join(', ') -%>
 
   <%- @schema.properties.select{ |p| p.ref? || p.ref_items? }.each do |p| %>
-  def <%= p.name -%>
     <%- if p.ref? %>
-    <%= "#{p.ref_class}Serializer.new(object.#{p.ref})" %>
+  <%= "has_one :#{p.ref_method}, serializer: #{p.ref_class}Serializer" %>
     <%- else %>
-    ActiveModel::Serializer::CollectionSerializer.new(
-      <%= "object.#{p.name}" -%>,
-      serializer: <%= "#{p.ref_class}" -%>Serializer,
-    )
+  <%= "has_many :#{p.ref_method}, serializer: #{p.ref_class}Serializer" %>
+
     <%- end -%>
-  end
   <%- end -%>
 
   <%- @schema.properties.reject{ |p| p.ref? || p.ref_items? }.each do |p| %>
